tests/type-error/no-leaks.fk
interface Eff = bang : Unit

data Bar = One {Int -> Int}

-- type error: Eff not declared in peg but f is applied
apply : Bar [Eff] -> Int -> Int
apply (One f) x = f x

main : Int
main! = apply (One {x -> x+1}) 0
